Add dump term for emacs tramp mode

--- a/templates/default/zshrc.erb
+++ b/templates/default/zshrc.erb
@@ -7,3 +7,17 @@ source $ZSH/oh-my-zsh.sh
 # RVM Hardcode
 PATH=$PATH:$HOME/.rvm/bin # Add RVM to PATH for scripting
 source ~/.rvm/scripts/rvm
+
+if [[ "$TERM" == "dumb" ]]
+then
+  unsetopt zle
+  unsetopt prompt_cr
+  unsetopt prompt_subst
+  if whence -w precmd >/dev/null; then
+      unfunction precmd
+  fi
+  if whence -w preexec >/dev/null; then
+      unfunction preexec
+  fi
+  PS1='$ '
+fi
